--- a/sass/ui/form/select/_variables.scss
+++ b/sass/ui/form/select/_variables.scss
@@ -47,3 +47,5 @@ $select-item-active-background: $lighter-grey !default;
 $select-item-active-border-color: transparent !default;
 $select-item-active-border-style: none !default;
 $select-item-active-border-width: 0 !default;
+
+$select-item-selected-font-weight: 600;
