--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -202,3 +202,9 @@
     @extend .#{$amendment};
   }
 }
+
+@mixin print($declarations) {
+  @each $property, $value in $declarations {
+    #{$property}: $value;
+  }
+}
