--- a/sass/ui/_core.scss
+++ b/sass/ui/_core.scss
@@ -13,6 +13,12 @@
 /** Form (default form styles) **/
 @import 'form/core';
 
+/** Hero (.hero) **/
+@import 'hero/core';
+
+/** Modal (.modal) **/
+@import 'modal/core';
+
 /** Button (.button) **/
 @import 'button/core';
 
