--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,7 +12,7 @@ $phone-max-m: "only screen and (max-width: 469px)" !default;
 $phone-l: "only screen and (min-width: 480px) and (max-width: 639px)" !default;
 $phone-max-l: "only screen and (max-width: 639px)" !default;
 
-$tablet: "only screen and (min-width: 640)" !default;
+$tablet: "only screen and (min-width: 640px)" !default;
 $tablet-max: "only screen and (max-width: 1023px)" !default;
 $tablet-s: "only screen and (min-width: 600px) and (max-width: 719px)" !default;
 $tablet-max-s: "only screen and (max-width: 719px)" !default;
