--- a/sass/type/_variables.scss
+++ b/sass/type/_variables.scss
@@ -5,7 +5,7 @@ $type-class: ".#{$type-name}" !default;
 // Body
 $body-font: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", sans-serif !default;
 $body-font-size: $base-rem !default;
-$body-font-color: $grey !default;
+$body-font-color: $dark-grey !default;
 $body-line-height: 1.1 !default;
 $body-font-weight: 300 !default;
 $body-letter-spacing: inherit !default;
