--- a/sass/animate/_placeholders.scss
+++ b/sass/animate/_placeholders.scss
@@ -4,8 +4,12 @@
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
   }
-  
+
   %hardware-accel {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    perspective: 1000;
     /**
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
