--- a/sass/ui/card/_layout.scss
+++ b/sass/ui/card/_layout.scss
@@ -135,7 +135,8 @@
   #{$card-class}__video,
   #{$card-class}__video video {
     width: 100%;
-    margin: 0;
+    height: auto;
+    margin: 0 auto;
     padding: 0;
     display: block;
   }
