--- a/sass/type/_layout.scss
+++ b/sass/type/_layout.scss
@@ -63,6 +63,14 @@
   }
 
 
+  #{$type-class}--ellipsis {
+    max-width: 100%;
+    display: inline-block;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
   #{$type-class}--left {
     @extend %type--left;
   }
